# demist

./: .buildinfo  CITATION.cff  LICENSE  README.md  genindex.html  py-modindex.html  pyproject.toml  search.html
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle
.doctrees/_apidoc/: demist.nro45m.qlook.doctree
.github/workflows/: tests.yaml
0.1.0/: index.html  searchindex.js
0.1.0/.doctrees/: environment.pickle  index.doctree
0.1.0/_apidoc/: demist.nro45m.html  demist.nro45m.models.html  demist.stats.html
0.1.0/_modules/: demist.html
0.2.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.2.0/.doctrees/: environment.pickle  index.doctree
0.2.0/_apidoc/: demist.html  demist.nro45m.html  (+4 more)
0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.5.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.7.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
0.8.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
0.9.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_apidoc/: demist.html  demist.nro45m.io.html  demist.nro45m.qlook.html
_modules/: index.html
_static/: switcher.json
demist/: __init__.py  stats.py
docs/: build  conf.py
tests/: test_init.py
(+135 files in other folders)
