[project]
name = "demist"
version = "0.1.0"
description = "DEcomposition of MIxed signals for Submillimeter Telescopes"
readme = "README.md"
keywords = [
    "astronomy",
    "demist",
    "millimeter",
    "nro-45m",
    "python",
    "radio-astronomy",
    "single-dish",
    "submillimeter",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "fire>=0.7,<1",
    "matplotlib>=3,<4",
    "ndtools>=1,<2",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "sam45>=1,<2",
    "scikit-learn>=1,<2",
    "scipy>=1,<2",
    "tqdm>=4,<5",
    "xarray>=2025,<2027",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "a-taniguchi@mail.kitami-it.ac.jp"

[project.license]
file = "LICENSE"

[project.scripts]
demist = "demist:cli"

[project.urls]
homepage = "https://demist-dev.github.io/demist"
repository = "https://github.com/demist-dev/demist"

[dependency-groups]
dev = [
    "black>=25,<27",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pandas-stubs>=2,<3",
    "pydata-sphinx-theme>=0.16,<1.0",
    "pyright>=1,<2",
    "pytest>=9,<10",
    "sphinx>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
